# mote

./: .dockerignore  .gitignore  .gitleaks.toml  Cargo.toml  README.md  deny.toml  flake.nix  justfile
.cargo/: audit.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs  table_provider.rs
crates/db-sidecar/src/: rebuild.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: executor.rs  expiration.rs  lib.rs  processor.rs  recovery.rs  slot_counter.rs
crates/engine/src/executor/: crud.rs  eth.rs  metrics.rs  op.rs
crates/exex/: Cargo.toml
crates/exex/src/: arrow.rs  lib.rs  metrics.rs  ring_buffer.rs  stream.rs
crates/exex/tests/: integration.rs
crates/glint-analytics/: Cargo.toml
crates/glint-analytics/src/: batch_decoder.rs  entity_store.rs  flight_sql.rs  ipc_client.rs  lib.rs  table_provider.rs
crates/glint-analytics/src/batch_decoder/: columns.rs
crates/glint-db-sidecar/: Cargo.toml
crates/glint-db-sidecar/src/: cli.rs  flight_sql.rs  ipc_client.rs  main.rs  sidecar.rs
crates/glint-e2e/: Cargo.toml
crates/glint-e2e/src/: analytics_handle.rs  eth_node_handle.rs  lib.rs  sidecar_handle.rs
crates/glint-e2e/tests/: e2e.rs
crates/glint-engine/: Cargo.toml
crates/glint-engine/src/: checkpoint.rs  executor.rs  expiration.rs  processor.rs  recovery.rs  slot_counter.rs
crates/glint-engine/src/executor/: crud.rs  decode.rs  eth.rs  op.rs
crates/glint-exex/src/: arrow.rs  lib.rs  stream.rs
crates/glint-exex/tests/: integration.rs
crates/glint-historical/: Cargo.toml
crates/glint-historical/src/: provider.rs  schema.rs  writer.rs
crates/glint-historical/tests/: provider_integration.rs  roundtrip.rs
crates/glint-node/: Cargo.toml
crates/glint-node/src/: cli.rs  rpc.rs
crates/glint-node/tests/: smoke.rs
crates/glint-primitives/: Cargo.toml
crates/glint-primitives/src/: columns.rs  constants.rs  entity.rs  error.rs  events.rs  exex_schema.rs  lib.rs  parse.rs  storage.rs  test_utils.rs  transaction.rs  validation.rs
crates/glint-sdk/: Cargo.toml
crates/glint-sdk/src/: client.rs  entity.rs  flight_sql.rs  lib.rs  rpc.rs  tx.rs
crates/historical/src/: lib.rs  provider.rs  writer.rs
crates/historical/tests/: provider_integration.rs
crates/mote-analytics/: Cargo.toml
crates/mote-analytics/src/: batch_decoder.rs  entity_store.rs  flight_sql.rs  health.rs  ipc_client.rs  lib.rs  main.rs  table_provider.rs
crates/mote-engine/: Cargo.toml
crates/mote-engine/src/: executor.rs  expiration.rs  processor.rs  recovery.rs  slot_counter.rs
crates/mote-engine/src/executor/: crud.rs
crates/mote-exex/: Cargo.toml
crates/mote-exex/src/: arrow.rs  lib.rs  parse.rs  ring_buffer.rs  stream.rs
crates/mote-exex/tests/: integration.rs
crates/mote-node/src/: genesis.rs  lib.rs
crates/mote-node/tests/: smoke.rs
crates/mote-primitives/: Cargo.toml
crates/mote-primitives/src/: annotations.rs  constants.rs  entity.rs  events.rs  exex_types.rs  lib.rs  storage.rs  transaction.rs  validation.rs
crates/node/: Cargo.toml
crates/node/src/: cli.rs  genesis.rs  lib.rs
crates/node/tests/: smoke.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: columns.rs  config.rs  constants.rs  entity.rs  error.rs  events.rs  exex_schema.rs  exex_types.rs  parse.rs  rpc.rs  storage.rs  test_utils.rs  transaction.rs  validation.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: client.rs  error.rs  flight_sql.rs  lib.rs
crates/sidecar-history/: Cargo.toml
crates/sidecar-history/src/: error.rs  history_writer.rs  lib.rs  metrics.rs  provider.rs  schema.rs  sql_queries.rs  writer.rs
crates/sidecar-history/src/provider/: annotation_extractors.rs  block_range_filter.rs  entities_history.rs  event_numeric_annotations.rs  event_string_annotations.rs  historical_events.rs  history_numeric_annotations.rs  history_string_annotations.rs
crates/sidecar-history/tests/: history_provider_integration.rs  history_roundtrip.rs  provider_integration.rs  roundtrip.rs
crates/sidecar-live/: Cargo.toml
crates/sidecar-live-sql/: Cargo.toml
crates/sidecar-live-sql/src/: applier.rs  lib.rs  provider.rs  schema.rs  sql_queries.rs
crates/sidecar-live/src/: batch_decoder.rs  entity_store.rs  lib.rs  metrics.rs  snapshot_io.rs  table_provider.rs
crates/sidecar-live/src/batch_decoder/: columns.rs
crates/sidecar-live/src/table_provider/: entities.rs  filter_pushdown.rs  numeric_annotations.rs  string_annotations.rs
crates/transport/: Cargo.toml  build.rs
crates/transport/proto/: exex.proto
crates/transport/src/: grpc.rs  grpc_client.rs  grpc_server.rs  ipc.rs  lib.rs  types.rs
docker/: Dockerfile.node  Dockerfile.sidecar
docs/: arkiv-comparison.md
docs/audit/: 2026-03-29-codebase-audit.md
docs/design/: normalized-annotations.md
e2e/: Cargo.toml
e2e/src/: eth_node_handle.rs  lib.rs  sidecar_handle.rs
e2e/tests/: e2e.rs
