[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cargo = { level = "warn", priority = -1 }

# TODO: clippy hangs (I've waited more than enough) with multicheck enabled on mote-primitives
multiple_crate_versions = "allow"
implicit_return = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Dmytro Onypko <vaporif@proton.me>"]
description = "Ephemeral entity layer for Ethereum"
repository = "https://github.com/vaporif/mote"
readme = "README.md"
keywords = ["ethereum", "reth", "ephemeral", "storage"]
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
mote-primitives = { path = "crates/mote-primitives" }

alloy-primitives = "1.5"
alloy-rlp = { version = "0.3", features = ["derive"] }
alloy-sol-types = "1.5"
alloy-consensus = "1.7"
alloy-eips = "1.7"
alloy-evm = "0.27"

reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3", features = ["node", "node-api", "evm", "cli"] }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-exex-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-trie = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }

# versions used by reth
revm = { version = "34.0.0", default-features = false }
revm-state = { version = "9.0.0", default-features = false }

arrow = { version = "58", features = ["ipc"] }
futures = "0.3"
tokio = { version = "1", features = ["net", "sync", "rt", "macros"] }
tokio-util = "0.7"
tracing = "0.1"
eyre = "0.6"
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

datafusion = "53"
arrow-flight = { version = "58", features = ["flight-sql-experimental"] }
tonic = "0.14"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
tower = { version = "0.5", features = ["util"] }

regex = "1"
thiserror = "2"
color-eyre = "0.6"
