[package]
name = "glint-analytics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Query service for Glint ephemeral entity storage"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
glint-primitives = { workspace = true, features = ["arrow"] }

alloy-primitives.workspace = true

arrow.workspace = true
async-trait.workspace = true
tokio.workspace = true
datafusion.workspace = true
tracing.workspace = true
eyre.workspace = true
bytes.workspace = true
roaring.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
arrow = { workspace = true, features = ["prettyprint"] }
alloy-primitives.workspace = true
glint-primitives = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
