[package]
name = "glint-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
glint-primitives.workspace = true
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-evm = { workspace = true }
alloy-sol-types = { workspace = true }
revm = { workspace = true }
reth-evm = { workspace = true }
reth-execution-types = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-provider = { workspace = true }
reth-trie = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
borsh = { workspace = true }
blake3.workspace = true

# OP Stack support (optional)
alloy-op-evm = { workspace = true, optional = true }
alloy-op-hardforks = { workspace = true, optional = true }
reth-optimism-evm = { workspace = true, optional = true }

[features]
op = [
    "dep:alloy-op-evm",
    "dep:alloy-op-hardforks",
    "dep:reth-optimism-evm",
]

[dev-dependencies]
reth-ethereum = { workspace = true }
reth-ethereum-primitives = { workspace = true, features = ["test-utils"] }
reth-optimism-chainspec = { workspace = true }
tempfile = "3"
