[package]
name = "glint-db-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified DB sidecar for Glint: live + historical entity queries"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
glint-analytics.workspace = true
glint-historical.workspace = true
glint-primitives.workspace = true

arrow.workspace = true
datafusion.workspace = true
arrow-flight.workspace = true
tonic.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["signal", "time", "io-util", "rt-multi-thread"] }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
color-eyre.workspace = true
futures.workspace = true
prost.workspace = true
rusqlite.workspace = true
parking_lot.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tower.workspace = true

[lints]
workspace = true
