[package]
name = "glint-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "End-to-end tests for Glint"
publish = false

[lints]
workspace = true

[dependencies]
eyre.workspace = true
serde_json.workspace = true
tempfile.workspace = true
reqwest.workspace = true

[dev-dependencies]
glint-sdk.workspace = true
glint-primitives.workspace = true

alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-network.workspace = true
alloy-signer-local.workspace = true

arrow.workspace = true

tokio = { workspace = true, features = ["full"] }
