[package]
name = "glint-historical"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SQLite historical storage for Glint entity events"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
glint-primitives = { workspace = true, features = ["arrow"] }
rusqlite.workspace = true
eyre.workspace = true
tracing.workspace = true
arrow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
datafusion.workspace = true
parking_lot.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
alloy-primitives.workspace = true
glint-primitives = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
