[package]
name = "glint-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightweight Rust SDK for the Glint ephemeral entity layer"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
flight_sql = ["dep:arrow-flight", "dep:arrow", "dep:tonic", "dep:prost", "dep:futures"]

[dependencies]
glint-primitives = { workspace = true, features = ["rpc"] }

alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-rlp.workspace = true
alloy-provider.workspace = true
alloy-network.workspace = true
alloy-rpc-types-eth.workspace = true

jsonrpsee = { workspace = true, features = ["http-client"] }
tokio = { workspace = true, features = ["full"] }
eyre.workspace = true
serde.workspace = true

arrow-flight = { workspace = true, optional = true }
arrow = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
