[package]
name = "glint-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightweight Rust SDK for the Glint ephemeral entity layer"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
glint-primitives = { workspace = true, features = ["rpc"] }

alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-provider.workspace = true
alloy-network.workspace = true
alloy-rpc-types-eth.workspace = true

jsonrpsee = { workspace = true, features = ["http-client"] }
tokio = { workspace = true, features = ["full"] }
eyre.workspace = true

arrow-flight.workspace = true
arrow.workspace = true
tonic.workspace = true
prost.workspace = true
futures.workspace = true
