[package]
name = "mote-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
mote-primitives.workspace = true
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-consensus = { workspace = true }
alloy-evm = { workspace = true }
alloy-sol-types = { workspace = true }
revm = { workspace = true }
reth-ethereum = { workspace = true }
reth-evm = { workspace = true }
reth-execution-types = { workspace = true }
reth-provider = { workspace = true }
reth-trie = { workspace = true }
reth-node-builder = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
