[package]
name = "mote-exex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ExEx that streams entity lifecycle events as Arrow RecordBatches"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mote-primitives = { path = "../mote-primitives" }

reth-exex = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-exex-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3", features = ["node"] }
reth-execution-types.workspace = true
reth-provider.workspace = true

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-eips = "1.7"
alloy-consensus.workspace = true

reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3" }

arrow = { version = "55", features = ["ipc"] }
futures = "0.3"
tokio = { version = "1", features = ["net", "sync", "rt", "macros"] }
tokio-util = "0.7"
tracing = "0.1"
metrics = "0.24"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7"
arrow = { version = "55", features = ["ipc", "prettyprint"] }
alloy-primitives.workspace = true
alloy-eips = "1.7"
mote-primitives = { path = "../mote-primitives" }
serde_json = "1"

[lints]
workspace = true
