[package]
name = "mote-exex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ExEx that streams entity lifecycle events as Arrow RecordBatches"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mote-primitives.workspace = true

reth-exex.workspace = true
reth-exex-types.workspace = true
reth-node-api.workspace = true
reth-execution-types.workspace = true
reth-primitives-traits.workspace = true

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true

arrow.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
eyre.workspace = true
borsh.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
arrow = { workspace = true, features = ["prettyprint"] }
alloy-primitives.workspace = true
alloy-eips.workspace = true
mote-primitives.workspace = true
borsh.workspace = true

[lints]
workspace = true
