[package]
name = "mote-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["arbitrary"] }
