[package]
name = "glint-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
arrow = ["dep:arrow"]
test-utils = ["arrow"]
rpc = ["dep:jsonrpsee"]

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true }
arrow = { workspace = true, optional = true }
eyre = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros", "client"], optional = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["arbitrary"] }
serde_json = { workspace = true }
