[package]
name = "glint-sidecar-live-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SQLite-backed latest entity state for Glint sidecar"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
glint-primitives = { workspace = true, features = ["arrow"] }
glint-analytics.workspace = true
rusqlite.workspace = true
eyre.workspace = true
arrow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
datafusion.workspace = true
parking_lot.workspace = true
tokio.workspace = true
alloy-primitives.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
alloy-primitives.workspace = true
glint-primitives = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
